src/deploy/kubernetes/infra/06_addons/istio/03_ingress/templates/jaeger-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    nginx.ingress.kubernetes.io/rewrite-target: /jaeger/\$2

    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret


spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /jaeger(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tracing
                port:
                  number: 80
